--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <!DOCTYPE = html>
 
-<h1>Hello world</h1>
+<head>
+  
+  <script src="main_game.js"></script>
+  
+</head>
+
+<body>
+
+  <h1>Hello world</h1>
+
+</body>
