--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE = html>
+<!doctype = html>
+<html>
+  <head>
 
-<head>
-  
-  <script src="main_game.js"></script>
-  
-</head>
+    <script src="main_game.js"></script>
 
-<body>
+  </head>
 
-  <h1>Hello World</h1>
-  <script src="main_game.js"></script>
+  <body>
 
-</body>
+    <h1>Hello World</h1>
+    <script src="main_game.js"></script>
+
+  </body>
+<html>
