--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <script src="/master/game_main.js"></script>
+    <script src="http://cdn.jsdelivr.net/gh/Cryodine/20timeweb/main/main_game.js"></script>
 
   </head>
 
