--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
 
-    <script src="http://cdn.jsdelivr.net/gh/Cryodine/20timeweb/main/main_game.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@master/game_main.js"></script>
 
   </head>
 
   <body>
 
     <h1>Hello World</h1>
-    <script src="/master/game_main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@master/game_main.js"></script>
 
   </body>
 <html>
