--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
 
-    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@master/game_main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@a2b7dc70b04d854a30a44a0acdcaf11690b44839/game_main.js"></script>
 
   </head>
 
   <body>
 
     <h1>Hello World</h1>
-    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@master/game_main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@a2b7dc70b04d854a30a44a0acdcaf11690b44839/game_main.js"></script>
 
   </body>
 <html>
