--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <h1>Hello World</h1>
     <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@a2b7dc70b04d854a30a44a0acdcaf11690b44839/game_main.js"></script>
+    <script> alert("hello there"); </script>
 
   </body>
-<html>
+</html>
