--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h1>Hello World</h1>
     <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@0a0cf4e0188898245d92b836994e9a46d9fc4c6c/game_main.js"></script>
-    <script> alert("hello there"); </script>
+    <script> start(); </script>
 
   </body>
 </html>
