--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
 
     <h1>Hello World</h1>
+    <canvas id="test" width="200" height"200"> this is a canvas to test webgl </canvas>
     <script> start(); </script>
 
   </body>
