--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@0a0cf4e0188898245d92b836994e9a46d9fc4c6c/game_main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@latest/game_main.js"></script>
 
   </head>
 
