--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@dc614c459b97d7287e0eb1595bf6abc157a7f559/game_main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@latest/game_main.js"></script>
 
   </head>
 
