--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@latest/game_main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@5d8989f107be3523969976240c6a58e0c0f926f2/game_main.js"></script>
 
   </head>
 
