--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@latest/game_main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Cryodine/20timeweb@370f66db90fa0969a11c8b1a1b3adb0f5b50327c/game_main.js"></script>
 
   </head>
 
