--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 
   </head>
 
-  <body>
+  <body onload="start()">
 
     <h1>Hello World</h1>
     <canvas id="test" width="800" height="800"> this is a canvas to test webgl </canvas>
-    <script> start(); </script>
 
   </body>
 </html>
